fixed contrast error

--- a/dgm2740/boston-city/scss/small.scss
+++ b/dgm2740/boston-city/scss/small.scss
@@ -59,10 +59,10 @@ main section.cardGrid {
     div:nth-child(3) {background-image: url('../images/card3.jpeg');}
     div:nth-child(4) {background-image: url('../images/card4.jpeg');}
     div:nth-child(1) a {
-      background-color: darken($blue, 20%);
+      background-color: darken($blue, 30%);
     }
     div:nth-child(2) a {
-      background-color: darken($gold, 30%);
+      background-color: darken($gold, 40%);
     }
     div:nth-child(3) a {
       background-color: darken($blue, 30%);
